<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/info"
            style="@style/wifi_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/type"
            style="@style/wifi_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/wifi_item_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/wifi_ssid" />

            <EditText
                android:id="@+id/ssid"
                style="@style/wifi_item_edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wifi_ssid_hint"
                android:inputType="textNoSuggestions"
                android:maxLength="32"
                android:singleLine="true" />

            <TextView
                style="@style/wifi_item_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/wifi_security" />

            <Spinner
                android:id="@+id/security"
                style="@style/wifi_item_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/wifi_ap_security"
                android:prompt="@string/wifi_security" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fields"
            style="@style/wifi_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/wifi_item_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/wifi_password" />

            <EditText
                android:id="@+id/password"
                style="@style/wifi_item_edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagForceAscii"
                android:maxLength="63"
                android:password="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/hint"
                style="@style/wifi_item_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="8dip"
                android:text="@string/credentials_password_too_short" />

            <CheckBox
                android:id="@+id/show_password"
                style="@style/wifi_item_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_show_password" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
