<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2015 Emil Suleymanov <suleymanovemil8@gmail.com>
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView"
                android:gravity="center"
                android:text="@string/ver"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/small_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/version"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/small_info"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ln1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/small_info"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/license3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ln2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/ln1"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:paddingTop="100dp"
                android:text="@string/license1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ln3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/ln2"
                android:layout_marginTop="10dp"
                android:gravity="center|top"
                android:padding="@dimen/margin_medium"
                android:text="@string/license2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>